--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 20px;
     background-color: rgb(4,0,45);
     background-image: url("https://images.unsplash.com/photo-1593642532400-2682810df593?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
     background-repeat: no-repeat;
+    line-height: 1.2;
+    background-attachment: fixed;
 }
 
 form{
-    background-color: rgba(255, 255, 255, 0.673);
+    background-color: rgba(255, 255, 255, 0.573);
     padding: 25px;
     border-radius: 10px;
     max-width: 400px;
@@ -34,36 +36,42 @@ select,
 textarea{
     padding: 8px;
     margin-bottom: 12px;
-    border: 1px solid #ccc;
+    border: 2px solid #949494;
     border-radius: 4px;
     box-sizing: border-box;
-    width: calc(100%-25px);
+    width: 200px;
 }
 
 input[type="range"] {
     width: 100%;
     margin-bottom: 10px;
+    accent-color: #6301e2;
 }
 
 input[type="checkbox"],
 input[type="radio"]{
     margin-right: 5px;
+    accent-color: #6301e2
 }
 
+input[type="file"]{
+    margin-top: 10px;
+}
 
 button{
-    width: 30%;
+    width: 27%;
     padding: 10px;
-    background-color: #28a745;
+    background-color: #6301e2;
     color: white;
-    border: none;
+    border: 2px solid #35007b;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+
 }
 
 button:hover{
-    background-color: #218838;
+    background-color: #913efd;
 }
 
 .small-input {
@@ -78,5 +86,14 @@ button:hover{
 
 h1{
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Segoe UI;
+    color: #6301e2;
+    text-transform: capitalize;
+}
+
+footer{
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 2px 3px 3px #000000;
+    text-decoration: underline;
 }
